--- a/Spherical Expansion/CMakeLists.txt
+++ b/Spherical Expansion/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required( VERSION 3.10 )
 
-project( expansion )
+project( project )
 
 include_directories( ./src )
 
-add_executable( expansion ./src/main.cpp ./src/solver.cpp )
+add_executable( project ./src/main.cpp ./src/solver.cpp )
